lib/core/api/ximu3_bindings.g.dart


  late final _psortPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>,
              ffi.Size,
              ffi.Size,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Int Function(ffi.Pointer<ffi.Void>,
                          ffi.Pointer<ffi.Void>)>>)>>('psort');
  late final _psort = _psortPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Void>,
          int,
          int,
          ffi.Pointer<
              ffi.NativeFunction<
                  ffi.Int Function(
                      ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>)>();

  void psort_r(
    ffi.Pointer<ffi.Void> __base,
    int __nel,
    int __width,
    ffi.Pointer<ffi.Void> arg3,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
                    ffi.Pointer<ffi.Void>)>>
        __compar,
  ) {
    return _psort_r(
      __base,
      __nel,
      __width,
      arg3,
      __compar,
    );
  }

  late final _psort_rPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>,
              ffi.Size,
              ffi.Size,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Int Function(
                          ffi.Pointer<ffi.Void>,
                          ffi.Pointer<ffi.Void>,
                          ffi.Pointer<ffi.Void>)>>)>>('psort_r');
  late final _psort_r = _psort_rPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Void>,
          int,
          int,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<
              ffi.NativeFunction<
                  ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
                      ffi.Pointer<ffi.Void>)>>)>();

  void qsort_r(
    ffi.Pointer<ffi.Void> __base,
    int __nel,
    int __width,
    ffi.Pointer<ffi.Void> arg3,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
                    ffi.Pointer<ffi.Void>)>>
        __compar,
  ) {
    return _qsort_r(
      __base,
      __nel,
      __width,
      arg3,
      __compar,
    );
  }

  late final _qsort_rPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>,
              ffi.Size,
              ffi.Size,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Int Function(
                          ffi.Pointer<ffi.Void>,
                          ffi.Pointer<ffi.Void>,
                          ffi.Pointer<ffi.Void>)>>)>>('qsort_r');
  late final _qsort_r = _qsort_rPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Void>,
          int,
          int,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<
              ffi.NativeFunction<
                  ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
                      ffi.Pointer<ffi.Void>)>>)>();

  int radixsort(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> __base,
    int __nel,
    ffi.Pointer<ffi.UnsignedChar> __table,
    int __endbyte,
  ) {
    return _radixsort(
      __base,
      __nel,
      __table,
      __endbyte,
    );
  }

  late final _radixsortPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>, ffi.Int,
              ffi.Pointer<ffi.UnsignedChar>, ffi.UnsignedInt)>>('radixsort');
  late final _radixsort = _radixsortPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>, int,
          ffi.Pointer<ffi.UnsignedChar>, int)>();

  int rpmatch(
    ffi.Pointer<ffi.Char> arg0,
  ) {
    return _rpmatch(
      arg0,
    );
  }

  late final _rpmatchPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'rpmatch');
  late final _rpmatch =
      _rpmatchPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int sradixsort(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> __base,
    int __nel,
    ffi.Pointer<ffi.UnsignedChar> __table,
    int __endbyte,
  ) {
    return _sradixsort(
      __base,
      __nel,
      __table,
      __endbyte,
    );
  }

  late final _sradixsortPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>, ffi.Int,
              ffi.Pointer<ffi.UnsignedChar>, ffi.UnsignedInt)>>('sradixsort');
  late final _sradixsort = _sradixsortPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>, int,
          ffi.Pointer<ffi.UnsignedChar>, int)>();

  void sranddev() {
    return _sranddev();
  }

  late final _sranddevPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('sranddev');
  late final _sranddev = _sranddevPtr.asFunction<void Function()>();

  void srandomdev() {
    return _srandomdev();
  }

  late final _srandomdevPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('srandomdev');
  late final _srandomdev = _srandomdevPtr.asFunction<void Function()>();

  int strtonum(
    ffi.Pointer<ffi.Char> __numstr,
    int __minval,
    int __maxval,
    ffi.Pointer<ffi.Pointer<ffi.Char>> __errstrp,
  ) {
    return _strtonum(
      __numstr,
      __minval,
      __maxval,
      __errstrp,
    );
  }

  late final _strtonumPtr = _lookup<
      ffi.NativeFunction<
          ffi.LongLong Function(ffi.Pointer<ffi.Char>, ffi.LongLong,
              ffi.LongLong, ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('strtonum');
  late final _strtonum = _strtonumPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, int, int,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  int strtoq(
    ffi.Pointer<ffi.Char> __str,
    ffi.Pointer<ffi.Pointer<ffi.Char>> __endptr,
    int __base,
  ) {
    return _strtoq(
      __str,
      __endptr,
      __base,
    );
  }

  late final _strtoqPtr = _lookup<
      ffi.NativeFunction<
          ffi.LongLong Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Int)>>('strtoq');
  late final _strtoq = _strtoqPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>, int)>();

  int strtouq(
    ffi.Pointer<ffi.Char> __str,
    ffi.Pointer<ffi.Pointer<ffi.Char>> __endptr,
    int __base,
  ) {
    return _strtouq(
      __str,
      __endptr,
      __base,
    );
  }

  late final _strtouqPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedLongLong Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Int)>>('strtouq');
  late final _strtouq = _strtouqPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>, int)>();

  late final ffi.Pointer<ffi.Pointer<ffi.Char>> _suboptarg =
      _lookup<ffi.Pointer<ffi.Char>>('suboptarg');

  ffi.Pointer<ffi.Char> get suboptarg => _suboptarg.value;

  set suboptarg(ffi.Pointer<ffi.Char> value) => _suboptarg.value = value;

  void XIMU3_char_arrays_free(
    XIMU3_CharArrays char_arrays,
  ) {
    return _XIMU3_char_arrays_free(
      char_arrays,
    );
  }

  late final _XIMU3_char_arrays_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(XIMU3_CharArrays)>>(
          'XIMU3_char_arrays_free');
  late final _XIMU3_char_arrays_free =
      _XIMU3_char_arrays_freePtr.asFunction<void Function(XIMU3_CharArrays)>();

  ffi.Pointer<ffi.Char> XIMU3_charging_status_to_string(
    int charging_status,
  ) {
    return _XIMU3_charging_status_to_string(
      charging_status,
    );
  }

  late final _XIMU3_charging_status_to_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int32)>>(
          'XIMU3_charging_status_to_string');
  late final _XIMU3_charging_status_to_string =
      _XIMU3_charging_status_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(int)>();

  ffi.Pointer<XIMU3_Connection> XIMU3_connection_new_usb(
    XIMU3_UsbConnectionInfo connection_info,
  ) {
    return _XIMU3_connection_new_usb(
      connection_info,
    );
  }

  late final _XIMU3_connection_new_usbPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<XIMU3_Connection> Function(
              XIMU3_UsbConnectionInfo)>>('XIMU3_connection_new_usb');
  late final _XIMU3_connection_new_usb =
      _XIMU3_connection_new_usbPtr.asFunction<
          ffi.Pointer<XIMU3_Connection> Function(XIMU3_UsbConnectionInfo)>();

  ffi.Pointer<XIMU3_Connection> XIMU3_connection_new_serial(
    XIMU3_SerialConnectionInfo connection_info,
  ) {
    return _XIMU3_connection_new_serial(
      connection_info,
    );
  }

  late final _XIMU3_connection_new_serialPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<XIMU3_Connection> Function(
              XIMU3_SerialConnectionInfo)>>('XIMU3_connection_new_serial');
  late final _XIMU3_connection_new_serial =
      _XIMU3_connection_new_serialPtr.asFunction<
          ffi.Pointer<XIMU3_Connection> Function(XIMU3_SerialConnectionInfo)>();

  ffi.Pointer<XIMU3_Connection> XIMU3_connection_new_tcp(
    XIMU3_TcpConnectionInfo connection_info,
  ) {
    return _XIMU3_connection_new_tcp(
      connection_info,
    );
  }

  late final _XIMU3_connection_new_tcpPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<XIMU3_Connection> Function(
              XIMU3_TcpConnectionInfo)>>('XIMU3_connection_new_tcp');
  late final _XIMU3_connection_new_tcp =
      _XIMU3_connection_new_tcpPtr.asFunction<
          ffi.Pointer<XIMU3_Connection> Function(XIMU3_TcpConnectionInfo)>();

  ffi.Pointer<XIMU3_Connection> XIMU3_connection_new_udp(
    XIMU3_UdpConnectionInfo connection_info,
  ) {
    return _XIMU3_connection_new_udp(
      connection_info,
    );
  }

  late final _XIMU3_connection_new_udpPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<XIMU3_Connection> Function(
              XIMU3_UdpConnectionInfo)>>('XIMU3_connection_new_udp');
  late final _XIMU3_connection_new_udp =
      _XIMU3_connection_new_udpPtr.asFunction<
          ffi.Pointer<XIMU3_Connection> Function(XIMU3_UdpConnectionInfo)>();

  ffi.Pointer<XIMU3_Connection> XIMU3_connection_new_bluetooth(
    XIMU3_BluetoothConnectionInfo connection_info,
  ) {
    return _XIMU3_connection_new_bluetooth(
      connection_info,
    );
  }

  late final _XIMU3_connection_new_bluetoothPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<XIMU3_Connection> Function(
                  XIMU3_BluetoothConnectionInfo)>>(
      'XIMU3_connection_new_bluetooth');
  late final _XIMU3_connection_new_bluetooth =
      _XIMU3_connection_new_bluetoothPtr.asFunction<
          ffi.Pointer<XIMU3_Connection> Function(
              XIMU3_BluetoothConnectionInfo)>();

  ffi.Pointer<XIMU3_Connection> XIMU3_connection_new_file(
    XIMU3_FileConnectionInfo connection_info,
  ) {
    return _XIMU3_connection_new_file(
      connection_info,
    );
  }

  late final _XIMU3_connection_new_filePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<XIMU3_Connection> Function(
              XIMU3_FileConnectionInfo)>>('XIMU3_connection_new_file');
  late final _XIMU3_connection_new_file =
      _XIMU3_connection_new_filePtr.asFunction<
          ffi.Pointer<XIMU3_Connection> Function(XIMU3_FileConnectionInfo)>();

  void XIMU3_connection_free(
    ffi.Pointer<XIMU3_Connection> connection,
  ) {
    return _XIMU3_connection_free(
      connection,
    );
  }

  late final _XIMU3_connection_freePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<XIMU3_Connection>)>>(
      'XIMU3_connection_free');
  late final _XIMU3_connection_free = _XIMU3_connection_freePtr.asFunction<
      void Function(ffi.Pointer<XIMU3_Connection>)>();
